final version without compression